--- a/.github/workflows/release-dev-3.yml
+++ b/.github/workflows/release-dev-3.yml
@@ -74,13 +74,16 @@ jobs:
 
       - name: Rename binary
         run: |
-          cp target/${{ matrix.target }}/release/silk-chiffon target/${{ matrix.target }}/release/silk-chiffon-${{ matrix.target }}
+          cp \
+            target/${{ matrix.target }}/release/silk-chiffon \
+            target/${{ matrix.target }}/release/silk-chiffon-${{ matrix.target }}
+          gzip -9 target/${{ matrix.target }}/release/silk-chiffon-${{ matrix.target }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: silk-chiffon-${{ matrix.target }}-${{ steps.version.outputs.version }}
-          path: target/${{ matrix.target }}/release/silk-chiffon-${{ matrix.target }}
+          path: target/${{ matrix.target }}/release/silk-chiffon-${{ matrix.target }}.gz
           compression-level: 0
 
   release:
@@ -95,8 +98,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ./binaries
-      - name: List binaries
-        run: ls -la ./binaries/**/*
 
       - name: Create GitHub release
         env:
