--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           # picking central time just because I can
-          VERSION="v$(date -z 'America/Chicago' '+%Y-%m-%d_%H:%M:%S')_$(git rev-parse --short=8 ${{ github.sha }})"
+          VERSION="v$(date '+%Y-%m-%d_%H-%M-%S')_$(git rev-parse --short=8 ${{ github.sha }})"
           gh release create ${VERSION} \
             --title "💝 Release ${VERSION}" \
             --generate-notes \
