--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "silk-chiffon"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "~1.0"
+anyhow = "^1.0.100"
 arrow = { version = "^56.2.0", features = ["default", "ipc_compression"] }
 clap = { version = "^4.5.48", features = ["default", "derive"] }
 clio = { version = "^0.3.5", features = ["clap-parse"] }
@@ -31,7 +31,7 @@ parquet = { version = "^56.2.0", features = [
   "arrow_canonical_extension_types",
 ] }
 sha2 = "^0.10.9"
-tempfile = "~3.23.0"
+tempfile = "^3.23.0"
 tokio = { version = "^1.47.1", features = ["full"] }
 sanitize-filename = "^0.6.0"
 serde_json = "^1.0.145"
