--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  RUSTC_WRAPPER: sccache
-  SCCACHE_GHA_ENABLED: "true"
+  # RUSTC_WRAPPER: sccache
+  # SCCACHE_GHA_ENABLED: "true"
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
   DUCKDB_VERSION: 1.4.1
   RUST_BACKTRACE: 1
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v4
 
       #   - uses: mozilla-actions/sccache-action@v0.0.9
-      - uses: ./.github/workflows/actions/sccache-action
+      # - uses: ./.github/workflows/actions/sccache-action
 
       - uses: dtolnay/rust-toolchain@stable
         with:
