--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,19 +113,22 @@ jobs:
         with:
           shared-key: "ci-ubuntu-latest"
 
-      - name: Install nextest
-        uses: taiki-e/install-action@v2
-        with:
-          tool: nextest
-
-      - name: Clear target directory
-        run: rm -rf target
+      - name: Get pwd
+        run: pwd
 
       - name: Check disk space
         run: df -h
 
-      - name: Get pwd
-        run: pwd
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+
+      - name: Check disk space
+        run: df -h
 
       - name: Run tests
-        run: cargo nextest run --release --all-features --locked
+        run: cargo test --all-features --locked
