--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  RUSTC_WRAPPER: sccache
-  SCCACHE_GHA_ENABLED: "true"
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
   DUCKDB_VERSION: 1.4.1
 
@@ -35,25 +33,50 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      #   - uses: mozilla-actions/sccache-action@v0.0.9
-      - uses: ./.github/workflows/actions/sccache-action
-
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install packages (Linux only)
-        if: ${{ matrix.os == 'linux' }}
+      - name: Install system dependencies
+        if: matrix.os == 'linux'
+        run: sudo apt-get update && sudo apt-get install -y lld
+
+      - name: Configure fast linker
+        if: matrix.os == 'linux'
+        run: |
+          mkdir -p ~/.cargo
+          cat >> ~/.cargo/config.toml << EOF
+          [target.x86_64-unknown-linux-gnu]
+          linker = "clang"
+          rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+          EOF
+
+      - name: Setup DuckDB cache
+        id: cache-duckdb
+        if: matrix.os == 'linux'
+        uses: actions/cache@v4
+        with:
+          path: |
+            /usr/local/lib/libduckdb.so
+            /usr/local/lib/libduckdb_static.a
+            /usr/local/include/duckdb.h
+            /usr/local/include/duckdb.hpp
+          key: duckdb-${{ env.DUCKDB_VERSION }}-linux-amd64-2025-10-11
+
+      - name: Install DuckDB
+        if: steps.cache-duckdb.outputs.cache-hit != 'true' && matrix.os == 'linux'
         run: |
           set -e
-          sudo apt-get update
-          sudo apt-get install -y curl unzip lld
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-${{ matrix.duckdb_asset }}.zip
-          unzip libduckdb-${{ matrix.duckdb_asset }}.zip -d libduckdb
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-linux-amd64.zip
+          unzip libduckdb-linux-amd64.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo mv libduckdb/libduckdb* /usr/local/lib/
           sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-${{ matrix.duckdb_asset }}.zip
+          rm -rf libduckdb libduckdb-linux-amd64.zip
+
+      - name: Configure DuckDB
+        if: steps.cache-duckdb.outputs.cache-hit == 'true' && matrix.os == 'linux'
+        run: sudo ldconfig /usr/local/lib
 
       - name: Install packages
         if: ${{ matrix.os == 'macos' }}
@@ -61,7 +84,7 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
         with:
-          shared-key: "build-${{ matrix.runner }}"
+          shared-key: "release-${{ matrix.runner }}"
 
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
