--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  RUSTC_WRAPPER: sccache
+  SCCACHE_GHA_ENABLED: true
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
   DUCKDB_VERSION: 1.4.1
   RUST_BACKTRACE: 1
@@ -29,6 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: ./.github/workflows/actions/sccache-action
+
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
@@ -69,6 +74,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: ./.github/workflows/actions/sccache-action
 
       - uses: dtolnay/rust-toolchain@stable
 
