--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  RUSTC_WRAPPER: sccache
+  SCCACHE_GHA_ENABLED: true
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
   DUCKDB_VERSION: 1.4.1
 
@@ -32,6 +34,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - uses: ./.github/workflows/actions/sccache-action
 
       - uses: dtolnay/rust-toolchain@stable
         with:
