--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,9 @@ concurrency:
 
 env:
   RUSTC_WRAPPER: sccache
-  SCCACHE_GHA_ENABLED: "true"
+  SCCACHE_GHA_ENABLED: true
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
-  DUCKDB_VERSION: 1.3.2
+  DUCKDB_VERSION: 1.4.1
 
 jobs:
   build:
@@ -35,25 +35,42 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      #   - uses: mozilla-actions/sccache-action@v0.0.9
       - uses: ./.github/workflows/actions/sccache-action
 
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install packages (Linux only)
-        if: ${{ matrix.os == 'linux' }}
+      - name: Install system dependencies
+        if: matrix.os == 'linux'
+        run: sudo apt-get update && sudo apt-get install -y lld
+
+      - name: Setup DuckDB cache
+        id: cache-duckdb
+        if: matrix.os == 'linux'
+        uses: actions/cache@v4
+        with:
+          path: |
+            /usr/local/lib/libduckdb.so
+            /usr/local/lib/libduckdb_static.a
+            /usr/local/include/duckdb.h
+            /usr/local/include/duckdb.hpp
+          key: duckdb-${{ env.DUCKDB_VERSION }}-linux-amd64-2025-10-11
+
+      - name: Install DuckDB
+        if: steps.cache-duckdb.outputs.cache-hit != 'true' && matrix.os == 'linux'
         run: |
           set -e
-          sudo apt-get update
-          sudo apt-get install -y curl unzip lld
           curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-${{ matrix.duckdb_asset }}.zip
           unzip libduckdb-${{ matrix.duckdb_asset }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo mv libduckdb/libduckdb* /usr/local/lib/
           sudo ldconfig /usr/local/lib
           rm -rf libduckdb libduckdb-${{ matrix.duckdb_asset }}.zip
+
+      - name: Configure DuckDB
+        if: steps.cache-duckdb.outputs.cache-hit == 'true' && matrix.os == 'linux'
+        run: sudo ldconfig /usr/local/lib
 
       - name: Install packages
         if: ${{ matrix.os == 'macos' }}
@@ -61,7 +78,7 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
         with:
-          shared-key: "build-${{ matrix.runner }}"
+          shared-key: "release-${{ matrix.runner }}"
 
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
