--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ codegen-units = 1
 panic = "abort"
 
 [lints.clippy]
+case_sensitive_file_extension_comparisons = "warn"
 needless_pass_by_value = "warn"
 option_as_ref_cloned = "warn"
 similar_names = "warn"
