--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ panic = "abort"
 
 [lints.clippy]
 case_sensitive_file_extension_comparisons = "warn"
+cast_lossless = "warn"
 needless_pass_by_value = "warn"
 option_as_ref_cloned = "warn"
 similar_names = "warn"
