--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ case_sensitive_file_extension_comparisons = "warn"
 cast_lossless = "warn"
 cast_possible_truncation = "warn"
 cast_possible_wrap = "warn"
+cast_precision_loss = "warn"
 needless_pass_by_value = "warn"
 option_as_ref_cloned = "warn"
 similar_names = "warn"
