--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,3 +79,16 @@ harness = false
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[lints.clippy]
+case_sensitive_file_extension_comparisons = "warn"
+cast_lossless = "warn"
+cast_possible_truncation = "warn"
+cast_possible_wrap = "warn"
+cast_precision_loss = "warn"
+cast_sign_loss = "warn"
+checked_conversions = "warn"
+clone_on_ref_ptr = "warn"
+needless_pass_by_value = "warn"
+option_as_ref_cloned = "warn"
+similar_names = "warn"
